--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://badnails.github.io/Dash",
+  "homepage": "https://badnails.github.io/dash",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
